# course_work

./: .env  .example_env  README.md  docker-compose.yml  dockerfile  pyproject.toml  run.sh
admin/: main.py  settings.py
admin/routers/: core_api.py  utils.py
admin/routers/cargo/: api.py  router.py  schemas.py
admin/routers/city/: api.py  router.py  schemas.py
admin/routers/path/: api.py  router.py  schemas.py  utils.py
admin/routers/task/: api.py  router.py  schemas.py  utils.py
admin/routers/truck/: api.py  router.py  schemas.py
crud_api/: cli.py  database.py  exceptions.py  main.py  models.py  ops.py  service.py  settings.py
crud_api/alembic/: env.py
crud_api/alembic/versions/: dbc1913753bf_добавлены_таблицы.py  fb95fe336e36_добавлена_уникальность_названий.py
crud_api/api/: router.py
crud_api/api/cargo/: models.py  router.py  schemas.py  service.py
crud_api/api/city/: models.py  router.py  schemas.py  service.py
crud_api/api/path/: models.py  router.py  schemas.py  service.py
crud_api/api/truck/: models.py  router.py  schemas.py  service.py
crud_api/misc/: fill_db.py
crud_api/samples/: cargo.json  city.json  path.json  truck.json
crud_api/utils/: validators.py
solve_api/: api.py  main.py  schemas.py  solver.py
