[project]
name = "course-work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.11",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
]

[tool.ruff]
extend-exclude = ["tests"]
line-length = 100

[tool.ruff.format]
quote-style = "double"  # Like Black and PEP
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 100
exclude = ["smartapi/alembic/*", "admin/*",]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]  # Ignore module imported but unused for __init__.py
"*/_sql_expression.py" = ["E501"]  # Ignore line too long for _sql_expression.py

[tool.ruff.lint]
# Lint list by command "ruff linter"
select = [
    "N",   # pep8-naming (Compliance with naming conventions)
    "E",   # pycodestyle (PEP 8)
    "W",   # pycodestyle (PEP 8 as space, trailing whitespace...)
    "F",   # Pyflakes (Unused imports and variables. Hidden or erased names. Overridden functions)
    "UP",  # pyupgrade (Automatic language syntax updates)
    "B",   # flake8-bugbear (Finding likely bugs and design problems in your program)
    "SIM", # flake8-simplify (Plugin that helps you to simplify code)
    "T20", # flake8-print (Check debug print)
    "I",   # isort (Sorting import)
]
exclude = ["smartapi/alembic/*", "admin/*",]
